somewhat working landing page

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name | Photography & Engineering</title>
+    <title>François Poitras | Photography & Engineering</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-
-    <header id="main-nav" class="site-header"></header>
-
     <main class="landing-container">
         <section class="slideshow-section">
             <div class="slideshow-container">
@@ -25,8 +22,8 @@
 
                 <!-- Overlay Content -->
                 <div class="hero-overlay">
-                    <h1>YOUR NAME</h1>
-                    <p>Capturing light, writing code.</p>
+                    <h1>François Poitras</h1>
+                    <p>Capturing light, one shot at a time.</p>
                     <div class="hero-buttons">
                         <a href="/fr/" class="btn btn-outline">Entrer (FR)</a>
                         <a href="/en/" class="btn">Enter Gallery (EN)</a>
@@ -69,7 +66,7 @@
             slides[slideIndex - 1].style.setProperty("display", "block", "important");
 
             // Schedule the next transition
-            setTimeout(showSlides, 5000); 
+            setTimeout(showSlides, 10000); 
         }
 
         // Trigger the first run
