--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,9 @@
                 <!-- Overlay Content -->
                 <div class="hero-overlay">
                     <h1>François Poitras</h1>
-                    <p>Capturing light, one shot at a time.</p>
+                    <p>Photographe</p>
                     <div class="hero-buttons">
-                        <a href="/fr/" class="btn btn-outline">Entrer (FR)</a>
+                        <a href="/fr/" class="btn">Entrer (FR)</a>
                         <a href="/en/" class="btn">Enter Gallery (EN)</a>
                     </div>
                 </div>
