damn this is starting to look like something

--- a/public/en/index.html
+++ b/public/en/index.html
@@ -24,7 +24,13 @@
             <!-- Photos injected here -->
         </div>
     </main>
-
+    <div id="lightbox" class="lightbox">
+        <span class="close-lightbox">&times;</span>
+        <img class="lightbox-content" id="lightbox-img">
+        <div id="lightbox-caption"></div>
+    </div>
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
     <script src="../assets/js/app.js"></script>
 </body>
 </html>
