add gear and more fixes

--- a/public/fr/about.html
+++ b/public/fr/about.html
@@ -1,4 +1,40 @@
-<header id="main-nav"></header>
-<main id="gallery-grid"></main>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>À Propos | François Poitras</title>
+    <link rel="stylesheet" href="../assets/css/style.css">
+</head>
+<body class="gallery-body">
 
-<script src="../assets/js/app.js"></script>
+    <header id="main-nav" class="site-header"></header>
+
+    <main class="content-wrapper">
+        <section class="about-container">
+            <div class="about-image">
+                <img src="../images/profile.jpg" alt="Moi!">
+            </div>
+            <div class="about-text">
+                <h1>À Propos</h1>
+                <p>
+                    Développeur de logiciels le jour, je me passionne pour la création de solutions 
+                    numériques robustes. À l'heure dorée, j'explore le monde à travers mon objectif, 
+                    capturant l'intersection entre la nature et la géométrie.
+                </p>
+                <p>
+                    Ce portfolio est le reflet de mes deux univers — hébergé sur une architecture 
+                    AWS "serverless" (S3 et CloudFront). Que je sois en train d'écrire du code 
+                    ou de cadrer une photo, je recherche toujours l'équilibre parfait.
+                </p>
+                <div class="about-links">
+                    <a href="https://github.com/poifra" target="_blank">GitHub</a>
+                    <a href="https://instagram.com/fp_photographies" target="_blank">Instagram</a>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <script src="../assets/js/app.js"></script>
+</body>
+</html>
