--- a/public/en/about.html
+++ b/public/en/about.html
@@ -2,28 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About | Your Name Photography</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About | François Poitras</title>
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
-<body>
+<body class="gallery-body">
 
-    <!-- inject me daddy -->
-    <header id="main-nav"></header>
+    <!-- Header injected by app.js -->
+    <header id="main-nav" class="site-header"></header>
 
-    <section class="about-section">
-        <div class="about-container">
-            <img src="../images/profile.jpg" alt="Your Name" class="about-photo">
-            <div class="about-description">
-                <h2>Your Name</h2>
-                <p>
-                    I am a software engineer by day and a landscape photographer by golden hour. 
-                    This portfolio is a custom-built AWS solution designed to showcase 
-                    the intersection of technical performance and visual storytelling.
-                </p>
+    <main class="content-wrapper">
+        <section class="about-container">
+            <div class="about-image">
+                <img src="../images/profile.jpg" alt="That's me!">
             </div>
-        </div>
-    </section>
+            <div class="about-text">
+                <h1>About Me</h1>
+                <p>
+                    By day, I am a software developer focused on building robust digital solutions. 
+                    By golden hour, I explore the world through my lens, capturing the intersection of 
+                    nature and geometry.
+                </p>
+                <p>
+                    This portfolio is a reflection of both my worlds—hosted on a serverless AWS 
+                    architecture (S3 & CloudFront) and showcasing my journey in photography. 
+                    Whether I'm writing code or framing a shot, I'm always looking for the perfect balance.
+                </p>
+                <div class="about-links">
+                    <a href="https://github.com/poifra" target="_blank">GitHub</a>
+                    <a href="https://instagram.com/fp_photographies" target="_blank">Instagram</a>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <script src="../assets/js/app.js"></script>
 </body>
