cleanup and prepare for AWS shit

--- a/public/en/index.html
+++ b/public/en/index.html
@@ -3,6 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Photographer based in Montréal.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://fp-photographies.ca/">
+    <meta property="og:title" content="François Poitras | Portfolio">
+    <meta property="og:description" content="Photographer based in Montréal.">
+    <!-- Use a high-res optimized photo. 1200x630px is the industry standard. -->
+    <meta property="og:image" content="https://fp-photographies.ca/images/thumbs/profile.webp">
+
+    <!-- Twitter (Discord uses these for the "Large Image" effect) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://fp-photographies.ca/">
+    <meta name="twitter:title" content="François Poitras | Portfolio">
+    <meta name="twitter:description" content="Photographer based in Montréal.">
+    <meta name="twitter:image" content="https://fp-photographies.ca/images/thumbs/profile.webp">
     <title>Gallery | François Poitras</title>
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
@@ -27,8 +43,12 @@
 
     <div id="lightbox" class="lightbox">
         <span class="close-lightbox">&times;</span>
-        <img class="lightbox-content" id="lightbox-img">
-        <div id="lightbox-caption"></div>
+        
+        <!-- New Wrapper Container -->
+        <div class="lightbox-wrapper">
+            <img class="lightbox-content" id="lightbox-img">
+            <div id="lightbox-caption"></div>
+        </div>
     </div>
 
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
